--- a/src/pages/TaggerSpace/components/ImgSwiper/index.module.scss
+++ b/src/pages/TaggerSpace/components/ImgSwiper/index.module.scss
@@ -10,6 +10,12 @@
   flex: 1;
 }
 
+.left div {
+  display: flex;
+  align-items: center;
+}
+
+
 .divider {
   position: absolute;
   display: inline-block;
