--- a/src/pages/PathoTaggerSpace/components/SliceList/index.module.scss
+++ b/src/pages/PathoTaggerSpace/components/SliceList/index.module.scss
@@ -38,6 +38,7 @@
             flex-direction: column;
             .sliceItem{
                 padding: 7px;
+                padding-left: 0;
                 margin-bottom: 2px;
                 color: #25b0e5; 
                 display: flex;
